feat(app): add proper error handling and inject custom http client